# griddetector

./: .gitignore  Cargo.toml  README.md  roadmap.md
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
book/: SUMMARY.md  concepts.md  config.md  index.md  pipeline.md  quickstart.md
config/: charuco_benchmark.json  coarse_edges_sample.json  coarse_segments_sample.json  grid_demo_sample.json  grid_hyp_demo_sample.json  lsd_vp_demo_sample.json  sample_config.json  segment_refine_demo_sample.json  test_result.md  vp_outlier_demo_ipgs.json  vp_outlier_demo_sample.json
doc/: edges.md  image.md  lsd_vp.md  pyramid.md  refine.md  roadmap.md  segments.md  vp_deep_research.md
scripts/: run_refinement.sh
src/: angle.rs  detector.rs  diagnostics.rs  edges.rs  homography.rs  lib.rs  lsd_vp.rs  main.rs  pyramid.rs  refine.rs  segments.rs  types.rs
src/config/: edge.rs  grid.rs  lsd_vp.rs  mod.rs  segment_refine_demo.rs  segments.rs  vp_outlier_demo.rs
src/detector/: mod.rs  options.rs  outliers.rs  params.rs  pipeline.rs  scaling.rs  workspace.rs
src/diagnostics/: builders.rs  bundles.rs  gradient_refine.rs  grid_indexing.rs  lsd.rs  mod.rs  outliers.rs  pipeline.rs  pyramid.rs  refine.rs  segment_refine.rs  segments.rs  timing.rs
src/edges/: grad.rs  mod.rs  nms.rs
src/grid/: bundling.rs  cluster1d.rs  families.rs  histogram.rs  hypothesis.rs  indexing.rs  irls.rs  mod.rs  outliers.rs  vp.rs
src/image/: f32.rs  io.rs  mod.rs  traits.rs  u8.rs
src/lsd_vp/: bundling.rs  engine.rs  families.rs  histogram.rs  mod.rs  vp.rs
src/pyramid/: filters.rs  mod.rs  pyramid.rs  pyramidbuild.rs  scaling.rs  types.rs
src/refine/: anchor.rs  endpoints.rs  families.rs  fit.rs  homography.rs  irls.rs  iteration.rs  mod.rs  options.rs  profile.rs  refinesegment.rs  roi.rs  sampling.rs  segment.rs  types.rs  workspace.rs
src/segments/: bundling.rs  extractor.rs  mod.rs  options.rs  region_accumulator.rs  segment.rs  tests.rs  types.rs
tests/: e2e.rs  refine.rs
tests/common/: mod.rs  (+1 more)
tools/: charuco_benchmark.py  plot_coarse_edges.py  plot_coarse_segments.py  plot_grid_hypothesis.py  plot_lsd_vp.py  plot_segment_refinement.py  plot_utils.py  plot_vp_outlier_demo.py  utils.py  visualize_report.py  vp_outlier_result.py  vp_utils.py
(+20 files in other folders)
