[package]
name = "griddetector"
version = "0.1.0"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
edition = "2021"
license = "MIT"
description = "High-performance regular grid/chessboard detector with image pyramid and pose recovery (Rust)"

[lib]
name = "grid_detector"
path = "src/lib.rs"

[[bin]]
name = "grid_demo"
path = "src/bin/grid_demo.rs"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rayon = { version = "1.10", optional = true }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24", default-features = false, features = ["png"] }

[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
